# pelimoji

./: .cruft.json  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  RELEASE.md  __init__.py  css.j2  pelimoji.css  pelimoji.py  pyproject.toml  requirements.txt  tasks.py
.github/workflows/: main.yml
pelican/plugins/pelimoji/: __init__.py  css.j2  pelimoji.css  pelimoji.py
