[tool.poetry]
name = "pelimoji"
version = "1.0.0"
description = "Pelican plugin for simple emoji replacement"
authors = ["Kay Ohtie <kay@coyotesin.space>"]
license = "AGPL-3.0"
readme = "README.md"
keywords = ["pelican", "plugin", "emoji"]
repository = "https://github.com/pelican-plugins/pelimoji"
documentation = "https://docs.getpelican.com"
packages = [
    { include = "pelican" },
]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Framework :: Pelican",
    "Framework :: Pelican :: Plugins",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.urls]
"Funding" = "https://donate.getpelican.com/"
"Tracker" = "https://github.com/pelican-plugins/pelimoji/issues"

[tool.poetry.dependencies]
python = "^3.6"
pelican = "^4.5"
jinja2 = "^3.1.2"
Pillow = "^9.5"
markdown = {version = "^3.2.2",optional = true}

[tool.poetry.dev-dependencies]
black = {version = "^19.10b0",allow-prereleases = true}
flake8 = "^3.8"
flake8-black = "^0.1.0"
invoke = "^1.3"
isort = "^5.4"
livereload = "^2.6"
markdown = "^3.2.2"
Werkzeug = "^1.0"

[tool.poetry.extras]
markdown = ["markdown"]

[tool.autopub]
project-name = "Pelimoji"
git-username = "botpub"
git-email = "botpub@autopub.rocks"

[tool.isort]
# Maintain compatibility with Black
combine_as_imports = true
force_grid_wrap = 0
include_trailing_comma = true
line_length = 88
multi_line_output = 3

# Sort imports within their section independent of the import type
force_sort_within_sections = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
