[tool.poetry]
name = "pelimoji"
version = "1.1.0"
description = "Pelican plugin to add custom emoji to your site"
authors = ["Kay Ohtie <kay@coyotesin.space>"]
license = "AGPL-3.0"
readme = "README.md"
keywords = ["pelican", "plugin", "emoji"]
repository = "https://github.com/pelican-plugins/pelimoji"
documentation = "https://docs.getpelican.com"
packages = [
    { include = "pelican" },
]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Framework :: Pelican",
    "Framework :: Pelican :: Plugins",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.urls]
"Funding" = "https://donate.getpelican.com/"
"Issue Tracker" = "https://github.com/pelican-plugins/pelimoji/issues"

[tool.poetry.dependencies]
python = ">=3.7,<4.0"
pelican = ">=4.5"
jinja2 = ">=3.1.2"
Pillow = ">=9.5"
markdown = {version = ">=3.2", optional = true}

[tool.poetry.group.dev.dependencies]
black = "^23"
invoke = "^2.1"
markdown = "^3.4"
ruff = ">=0.0.275"

[tool.poetry.extras]
markdown = ["markdown"]

[tool.autopub]
project-name = "Pelimoji"
git-username = "botpub"
git-email = "52496925+botpub@users.noreply.github.com"

[tool.ruff]
select = [
  "B",   # flake8-bugbear
  "BLE", # flake8-blind-except
  "E",   # pycodestyle
  "F",   # pyflakes
  "I",   # isort
  "ICN", # flake8-import-conventions
  "ISC", # flake8-implicit-str-concat
  "PL",  # pylint
  "RET", # flake8-return
  "RUF", # ruff-specific rules
  "SIM", # flake8-simplify
  "T10", # flake8-debugger
  "T20", # flake8-print
  "TID", # flake8-tidy-imports
  "TRY", # tryceratops
  "UP",  # pyupgrade
  "W",   # pycodestyle
  "YTT", # flake8-2020
]

ignore = [
  "C417",    # Unnecessary `map` usage
  "PLW0603", # Using global statements
]

target-version = "py38"

[tool.ruff.isort]
known-first-party = ["pelican"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
